# opc-memory-mcp

./: .gitignore  HISTORY.md  README.md  main.py  pyproject.toml
examples/: README.md  opc.json.example
examples/hooks/: opc-path.ts
